[metadata]
name = networking-mrv
version = 0.1.0
summary = MRV ML2 Mechanism driver
description-file =
	README.rst
author = MRV Communications
author-email = mrv-ml2@mrv.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_mrv

data_files = 
    /etc/neutron/plugins/ml2/ = etc/ml2_conf_mrv.ini

[entry_points]
neutron.ml2.mechanism_drivers =
    mrv = networking_mrv.ml2.drivers.mrv.mech_mrv:MrvMechanismDriver

#neutron.db.alembic_migrations =
#    networking-mrv = networking_mrv.db.migration:alembic_migrations

[global]
setup-hooks =
    pbr.hooks.setup_hook

#[build_sphinx]
#source-dir = doc/source
#build-dir = doc/build
#all_files = 1

#[upload_sphinx]
#upload-dir = doc/build/html

